@@ -2,6 +2,8 @@ $Id$
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+- fix syslinux not doing ttys in chroot properly (fixs console) , update todo
+
 - update todo
 
 - syslinux changes: microfs used for mfsroot, then chroot the FAT32 mount
